fixed button alignment on bottom

--- a/src/style.css
+++ b/src/style.css
@@ -73,7 +73,7 @@ body {
 
 #bottom .settings {
     display: flex;
-    justify-content: right;
+    justify-content: flex-end;
 }
 
 #bottom button {
